{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 43,
  "lineage": "fcfbfb84-4af4-eb18-e533-2aa9abf36b76",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "spandan_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c02fb55956c7d316",
            "arn": "arn:aws:ec2:us-east-1:072163949866:instance/i-0c41c83d3676a18c7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c41c83d3676a18c7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "spandan-backend",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0a91544ddeee309a2"
              }
            ],
            "primary_network_interface_id": "eni-0a91544ddeee309a2",
            "private_dns": "ip-10-0-1-61.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.61",
            "public_dns": "ec2-98-86-255-110.compute-1.amazonaws.com",
            "public_ip": "98.86.255.110",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-057a46a1b0910db65",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e5c778bc7b91a33b",
            "tags": {
              "Name": "spandan_ec2"
            },
            "tags_all": {
              "Name": "spandan_ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06be11af15e08a8be"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "072163949866",
            "id": "i-0c41c83d3676a18c7",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.spandan_sg",
            "aws_subnet.spandan_subnet",
            "aws_vpc.spandan_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "spandan_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:072163949866:internet-gateway/igw-0207d786eab667bc2",
            "id": "igw-0207d786eab667bc2",
            "owner_id": "072163949866",
            "region": "us-east-1",
            "tags": {
              "Name": "spandan_igw"
            },
            "tags_all": {
              "Name": "spandan_igw"
            },
            "vpc_id": "vpc-086fb4d5bd50178ae"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.spandan_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "spandan_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:072163949866:route-table/rtb-0cec6bb1c236aafa3",
            "id": "rtb-0cec6bb1c236aafa3",
            "owner_id": "072163949866",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0207d786eab667bc2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "spandan_rt"
            },
            "tags_all": {
              "Name": "spandan_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-086fb4d5bd50178ae"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "072163949866",
            "id": "rtb-0cec6bb1c236aafa3",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.spandan_igw",
            "aws_vpc.spandan_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "spandan_myvpc_public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dbd7273452e12ab3",
            "region": "us-east-1",
            "route_table_id": "rtb-0cec6bb1c236aafa3",
            "subnet_id": "subnet-0e5c778bc7b91a33b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.spandan_igw",
            "aws_route_table.spandan_rt",
            "aws_subnet.spandan_subnet",
            "aws_vpc.spandan_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "spandan_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:072163949866:security-group/sg-06be11af15e08a8be",
            "description": "Allow SSH and HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06be11af15e08a8be",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "spandan_sg",
            "name_prefix": "",
            "owner_id": "072163949866",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "spandan_sg"
            },
            "tags_all": {
              "Name": "spandan_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-086fb4d5bd50178ae"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "072163949866",
            "id": "sg-06be11af15e08a8be",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.spandan_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "spandan_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:072163949866:subnet/subnet-0e5c778bc7b91a33b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e5c778bc7b91a33b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "072163949866",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "spandan_subnet"
            },
            "tags_all": {
              "Name": "spandan_subnet"
            },
            "vpc_id": "vpc-086fb4d5bd50178ae"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "072163949866",
            "id": "subnet-0e5c778bc7b91a33b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.spandan_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "spandan_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:072163949866:vpc/vpc-086fb4d5bd50178ae",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fde276c612fa877a",
            "default_route_table_id": "rtb-05bb694d106513088",
            "default_security_group_id": "sg-0523da36af5d9e913",
            "dhcp_options_id": "dopt-0578b2ca3fc607fa7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-086fb4d5bd50178ae",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05bb694d106513088",
            "owner_id": "072163949866",
            "region": "us-east-1",
            "tags": {
              "Name": "spandan_vpc"
            },
            "tags_all": {
              "Name": "spandan_vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "072163949866",
            "id": "vpc-086fb4d5bd50178ae",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}